lerned grid system

--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- script -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
   </head>
 
   <body>
+
+    <div class="container">
+      <div class="simple text">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor ea nisi doloribus harum hic fuga aut impedit
+        nostrum obcaecati laudantium non voluptatibus a veniam explicabo, ullam autem dignissimos quia molestiae.
+      </div>
+
+      <div class="row">
+        <div class="col-md-4" style="background: rebeccapurple;">Left</div>
+        <div class="col-md-4" style="background: #ffff19ff;"> mdi</div>
+        <div class="col-md-4" style="background: #F22395;">Right</div>
+      </div>
+
+    </div>
 
   </body>
 
