--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4" style="background: rebeccapurple;">Left</div>
-        <div class="col-md-4" style="background: #ffff19ff;"> mdi</div>
-        <div class="col-md-4" style="background: #F22395;">Right</div>
+        <div class="col-xs-12 col-sm-9 col-md-4 col-lg-6 " style="background-color: red">Первый</div>
+        <div class="col-xs-12 col-sm-3 col-md-8 col-lg-6 " style="background-color: orange">Второй</div>
       </div>
 
     </div>
