--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 
   <body>
 
-    <div class="container">
-      <div class="simple text">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor ea nisi doloribus harum hic fuga aut impedit
-        nostrum obcaecati laudantium non voluptatibus a veniam explicabo, ullam autem dignissimos quia molestiae.
-      </div>
-
       <div class="row">
-        <div class="col-xs-12 col-sm-9 col-md-4 col-lg-6 " style="background-color: red">Первый</div>
-        <div class="col-xs-12 col-sm-3 col-md-8 col-lg-6 " style="background-color: orange">Второй</div>
+        <div class="col-lg-5 col-lg-push-7">
+            <div class="row">
+                <div class="col-lg-6" style="background-color: rgb(19, 56, 99)">Первbxysqй</div>
+                <div class="col-lg-6" style="background-color: rgb(165, 143, 103)">Вторbxysqq</div>
+              </div>
+        </div>
+        <div class="col-lg-7 col-lg-pull-5" style="background-color: orange">Второй</div>
       </div>
 
     </div>
