--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
-<<!DOCTYPE html>
-  <html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Анкетирование</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- css -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- script -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
-  </head>
+<head>
 
-  <body>
+  <meta charset="utf-8">
+  <title>Анкетирование</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- css -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- script -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</head>
 
-      <div class="row">
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Your result</a>
+        
+          <div>
+            <ul class="navbar-nav">
+              <li class="active">
+                <a class="nav-link" href="#">Main </a>
+              </li>
+              <li>
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#">Feedback</a>
+              </li>
+            </ul>
+          </div>
+          </div>
+        </nav>
+
+  <!-- <div class="row">
         <div class="col-lg-5 col-lg-push-7">
             <div class="row">
                 <div class="col-lg-6" style="background-color: rgb(19, 56, 99)">Первbxysqй</div>
@@ -26,8 +47,8 @@
         <div class="col-lg-7 col-lg-pull-5" style="background-color: orange">Второй</div>
       </div>
 
-    </div>
+    </div> -->
 
-  </body>
+</body>
 
-  </html>
+</html>
