blockqute ; code ; pre; mark ;color of text and deleted all comments after this commit

--- a/index.html
+++ b/index.html
@@ -16,8 +16,76 @@
 </head>
 
 <body>
+  <!-- 
+  <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, doloribus ipsum! Modi magni reiciendis
+    necessitatibus quisquam totam ex at deserunt quis saepe, harum, possimus impedit alias doloribus! Blanditiis, nisi
+    minima!<small>type it</small></h1>
+    <p>los
+    <mark>
+      wow ,u can do it
+    </mark>
+    </p> -->
+  <!-- <blockquote class="blockquote text-right">
+    Некая умная вещь.
+    <footer class="blockquote-footer">Стив Джобс!</footer>
+  </blockquote>
+  <div class="text-uppercase">aewfwefwf</div>
+  <div class="text-lowercase">bsffsrstr</div>
+  <div class="text-capitalize">cssssssfsfssf</div>
 
+  <div class="card">
+    <div class="card-body">
+      <blockquote class="blockquote mb-0">
+        <p>Какая-то умная цитата.</p>
+        <footer class="blockquote-footer">Стив Джобс<cite title="Source Title"></cite></footer>
+      </blockquote>
+    </div>
+  </div>
+  <code>Type Something</code>
+  <code>Type Something more</code> -->
+
+  <!-- <div class="container">
+    <pre>
+        for (int i=0; i <10; i++)
+          print ("sub");
+    </pre>
+  </div> -->
+  <!-- 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav> -->
+  <!-- <nav class="navbar navbar-expand-lg navbar-default bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Your result</a>
         
@@ -35,7 +103,7 @@
             </ul>
           </div>
           </div>
-        </nav>
+        </nav> -->
 
   <!-- <div class="row">
         <div class="col-lg-5 col-lg-push-7">
