--- a/index.html
+++ b/index.html
@@ -13,110 +13,54 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  </style>
 </head>
 
 <body>
-  <!-- 
-  <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, doloribus ipsum! Modi magni reiciendis
-    necessitatibus quisquam totam ex at deserunt quis saepe, harum, possimus impedit alias doloribus! Blanditiis, nisi
-    minima!<small>type it</small></h1>
-    <p>los
-    <mark>
-      wow ,u can do it
-    </mark>
-    </p> -->
-  <!-- <blockquote class="blockquote text-right">
-    Некая умная вещь.
-    <footer class="blockquote-footer">Стив Джобс!</footer>
-  </blockquote>
-  <div class="text-uppercase">aewfwefwf</div>
-  <div class="text-lowercase">bsffsrstr</div>
-  <div class="text-capitalize">cssssssfsfssf</div>
-
-  <div class="card">
-    <div class="card-body">
-      <blockquote class="blockquote mb-0">
-        <p>Какая-то умная цитата.</p>
-        <footer class="blockquote-footer">Стив Джобс<cite title="Source Title"></cite></footer>
-      </blockquote>
-    </div>
-  </div>
-  <code>Type Something</code>
-  <code>Type Something more</code> -->
-
-  <!-- <div class="container">
-    <pre>
-        for (int i=0; i <10; i++)
-          print ("sub");
-    </pre>
-  </div> -->
-  <!-- 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav> -->
-  <!-- <nav class="navbar navbar-expand-lg navbar-default bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Your result</a>
-        
-          <div>
-            <ul class="navbar-nav">
-              <li class="active">
-                <a class="nav-link" href="#">Main </a>
-              </li>
-              <li>
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li>
-                <a class="nav-link" href="#">Feedback</a>
-              </li>
-            </ul>
-          </div>
-          </div>
-        </nav> -->
-
-  <!-- <div class="row">
-        <div class="col-lg-5 col-lg-push-7">
-            <div class="row">
-                <div class="col-lg-6" style="background-color: rgb(19, 56, 99)">Первbxysqй</div>
-                <div class="col-lg-6" style="background-color: rgb(165, 143, 103)">Вторbxysqq</div>
-              </div>
+  <button class="btn btn-default">Example of button</button>
+  <input type="submit" class="btn btn-primary" value="Main button">
+  <button class="btn btn-success">Confirm</button>
+  <a href="#" class="btn btn-info" role="button">Notification</a>
+  <button class="btn btn-warning">Attention</button>
+  <button class="btn btn-danger">Decline</button>
+  <button class="btn btn-link">Link example</button>
+  <br>
+  <button class="btn btn-default btn-lg">Example of button</button>
+  <button class="btn btn-default btn-md">Example of button</button>
+  <button class="btn btn-default btn-sm">Example of button</button>
+  <button class="btn btn-default btn-xs">Example of button</button>
+  <br>
+  <button class="btn btn-warning btn-md btn-block">Example of button</button>
+  <br>
+  <button class="btn btn-warning btn-lg active">Large active button</button>
+  <button class="btn btn-warning btn-lg disabled">Large disabled button</button>
+  <br>
+  <div class="btn-toolbar" role="toolbar">
+      <div class="btn-group btn-group-lg" data-toggle="buttons">
+          <label class="btn btn-primary">
+            <input type="checkbox"> first one
+          </label>
+          <label class="btn btn-primary">
+            <input type="checkbox"> Second
+          </label>
+          <label class="btn btn-primary">
+            <input type="checkbox"> Third
+          </label>
         </div>
-        <div class="col-lg-7 col-lg-pull-5" style="background-color: orange">Второй</div>
       </div>
 
-    </div> -->
-
+    <div class="btn-group btn-group-lg" data-toggle="buttons">
+      <label class="btn btn-primary">
+        <input type="radio"> first one
+      </label>
+      <label class="btn btn-primary">
+        <input type="radio"> Second
+      </label>
+      <label class="btn btn-primary">
+        <input type="radio"> Third
+      </label>
+    </div>
+  </div>
 </body>
 
 </html>
